--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ commands:
             sudo ./aws/install
 
     install_ansible:
-      description: Install Ansible 
+      description: Install Ansible v2 
       steps:
         - run:
-            name: Install Ansible
+            name: Install Ansible v2
             command: | 
               sudo apt update
               sudo apt install software-properties-common 
@@ -425,7 +425,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [master]
+              only: [Master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
