--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ commands:
             sudo ./aws/install
 
     install_ansible:
-      description: Install Ansible  
+      description: Install Ansible v2 
       steps:
         - run:
-            name: Install Ansible 
+            name: Install Ansible v2
             command: | 
               sudo apt update
               sudo apt install software-properties-common 
