--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,8 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"      
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+            npm audit --audit-level=critical   
       - run:
           name: Ensure frontend infrastructure exist
           command: |
