--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ commands:
             sudo ./aws/install
 
     install_ansible:
-      description: Install Ansible v2 
+      description: Install Ansible 
       steps:
         - run:
-            name: Install Ansible v2
+            name: Install Ansible
             command: | 
               sudo apt update
               sudo apt install software-properties-common 
@@ -160,8 +160,7 @@ jobs:
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
             npm audit --audit-level=critical      
-
-
+            
   deploy-infrastructure:
     docker:
       - image: cimg/base:stable
@@ -176,6 +175,7 @@ jobs:
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+              
       - run:
           name: Ensure frontend infrastructure exist
           command: |
@@ -183,7 +183,8 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"     
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" 
+                    
       - run:
           name: Add back-end ip to ansible inventory
           command: |
@@ -198,8 +199,10 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
+
       - destroy-environment
        
+
   configure-infrastructure:
     docker:
       - image: cimg/base:stable
@@ -270,6 +273,7 @@ jobs:
           command: |
             cd frontend
             npm run build
+            npm install
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive 
            
       - destroy-environment
@@ -361,23 +365,26 @@ jobs:
       - install_awscli
       - install_nodejs
       - run:
-          name: Save Old Workflow ID to kvdb.io
+          name: Install dependencies
           command: |
-            export OLD_WORKFLOW_ID=$(aws cloudformation \
-                      list-exports --query "Exports[?name==\`WorkflowID\`].value" \
-                      --no-paginate --output text)
-            echo "Old Workflow ID: $OLD_WORKFLOW_ID"
-            curl https://kvdb.io/${KVDB_BUCKET}/old_workflow_id -d "${OLD_WORKFLOW_ID}"
+            sudo apt install -y tar gzip curl
+            sudo apt install -y python3 python3-pip
       - run:
           name: Update cloudfront distribution
           command: |
+            export OldWorkflowID=$(aws cloudformation \
+                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                    --no-paginate --output text)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            curl https://kvdb.io/JEoC9j1n6xyvfuchcPS4MY/oldid_${CIRCLE_WORKFLOW_ID:0:7} -d "${OldWorkflowID}"
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
-              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
-              --stack-name InitialStack
+              --tags project=udapeople \
+              --stack-name "InitialStack-${OldWorkflowID}" \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"        
       - destroy-environment
       - revert-migrations
-
 
   cleanup:
     docker:
@@ -389,21 +396,17 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            export STACKS=($(aws cloudformation list-stacks \
-                --query "StackSummaries[*].StackName" \
-                --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-            echo Stack names: "${STACKS[@]}"
-            
-            export OldWorkflowID=$(curl --insecure https://kvdb.io/${KVDB_BUCKET}/old_workflow_id)
-            echo Old Workflow ID: $OLD_WORKFLOW_ID
-      
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/JEoC9j1n6xyvfuchcPS4MY/oldid_${CIRCLE_WORKFLOW_ID:0:7})            
+            echo "Found Old Stack ID : ${OldWorkflowID}"
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+             echo "OKAY"
+             aws s3 rm s3://udapeople-${OldWorkflowID} --recursive
+             aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+             aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            else
+             echo 'FAILED'
             fi
-            
 
 workflows:
   default:
@@ -422,7 +425,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [Master]
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
