--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -1,6 +1,5 @@
 Description: >
   UdaPeople backend stack.
-
 Parameters:
   ID:
     Description: Unique identifier.
@@ -21,6 +20,10 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp  # Node-Exporter
+          FromPort: 9100
+          ToPort: 9100
+          CidrIp: 0.0.0.0/0
 
   EC2Instance:
     Type: AWS::EC2::Instance
@@ -28,8 +31,8 @@ Resources:
       InstanceType: t2.micro
       SecurityGroups:
         - Ref: InstanceSecurityGroup
-      KeyName: Udacity 
-      ImageId: ami-0b93ce03dcbcb10f6
+      KeyName: Udacity
+      ImageId: ami-0b93ce03dcbcb10f6 
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
