--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -20,7 +20,7 @@ Resources:
           FromPort: 3030
           ToPort: 3030
           CidrIp: 0.0.0.0/0
-        - IpProtocol: tcp  # Node-Exporter
+        - IpProtocol: tcp  
           FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/0
