--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,7 +219,7 @@ jobs:
           command: |
             cd .circleci/ansible
             cat inventory.txt
-            ansible-playbook -i inventory.txt configure-server.ymls
+            ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment    
 
   run-migrations:
