--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,7 +160,23 @@ jobs:
             npm install 
             npm audit fix --force --audit-level=critical
             npm audit fix --force --audit-level=critical
-            npm audit --audit-level=critical      
+            npm audit --audit-level=critical    
+ 
+  initial-stack:
+    docker:
+      - image: cimg/node:13.8.0
+    steps:
+      - checkout
+      - install_awscli
+      - install_nodejs
+      - run:
+          name: Update cloudfront distribution
+          command: |
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --tags project=udapeople \
+              --stack-name "InitialStack-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"     
             
   deploy-infrastructure:
     docker:
@@ -378,7 +394,7 @@ jobs:
                     --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            curl https://kvdb.io/JEoC9j1n6xyvfuchcPS4MY/oldid_${CIRCLE_WORKFLOW_ID:0:7} -d "${OldWorkflowID}"
+            curl https://kvdb.io/P5gJvGTUbLiytyZq6A5Ngc/oldid_${CIRCLE_WORKFLOW_ID:0:7} -d "${OldWorkflowID}"
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --tags project=udapeople \
@@ -397,7 +413,7 @@ jobs:
       - run:
           name: Remove old stacks and files
           command: |
-            export OldWorkflowID=$(curl --insecure https://kvdb.io/JEoC9j1n6xyvfuchcPS4MY/oldid_${CIRCLE_WORKFLOW_ID:0:7})            
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/P5gJvGTUbLiytyZq6A5Ngc/oldid_${CIRCLE_WORKFLOW_ID:0:7})            
             echo "Found Old Stack ID : ${OldWorkflowID}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
@@ -414,6 +430,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - initial-stack
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
