--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -430,7 +430,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-      - initial-stack
+      - initial-stackss
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
