--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,4 +457,4 @@ workflows:
       - cloudfront-update:
           requires: [smoke-test]
       - cleanup:
-          requires: [cloudfront-update]ss
+          requires: [cloudfront-update]
